--- a/estilo.css
+++ b/estilo.css
@@ -27,7 +27,7 @@ input[type=number] {
 
 body{
     font: 14px 'Roboto', sans-serif;
-    background-color: #EFEFEF;
+    background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,11 +40,6 @@ h2{
     margin-bottom: 10px;
 }
 
-span{
-    text-align: center;
-    font-size: .8em;
-}
-
 #container{
     min-width: 350px;
     display: flex;
@@ -52,7 +47,8 @@ span{
     gap: 15px;
     padding: 30px;
     border-radius: 15px;
-    background-color: #696969;
+    background-color: #1F2044;
+    background-image: linear-gradient(180deg, #9f90f4 0, #6c6cd8 50%, #274bbd 100%);
 }
 
 #container-parametros{
@@ -62,23 +58,29 @@ span{
     gap: 15px;
 }
 
+#container-parametros span{
+    text-align: center;
+    font-size: .8em;
+}
+
 #container-quantidade, #container-caracteres{
     display: flex;
     flex-direction: column;
     padding: 15px;
     border-radius: 5px;
-    background-color: #A9A9A9;
+    background-color: #FFFFFF;
 }
 
 #container-quantidade input{
     width: 80px;
     margin:  15px auto 0;
     padding: 5px;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: bold;
     text-align: center;
     border: 0;
     border-radius: 5px;
+    background-color: #CDD8DF;
 }
 
 #container-caracteres label{
@@ -87,8 +89,10 @@ span{
     padding: 5px;
     margin-top: 5px;
     text-align: center;
+    font-weight: bold;
     border-radius: 5px;
-    background-color: #D3D3D3;
+    color: #FFFFFF;
+    background-color: #3C97FF;
 }
 
 #container-caracteres input{
@@ -98,11 +102,19 @@ span{
 #btn-gerar{
     font-size: 1.2em;
     font-weight: bold;
-    padding: 5px;
+    padding: 10px;
     border: 0;
     border-radius: 5px;
-    background-color: #A9A9A9;
+    color: #FFFFFF;
+    background-color: #3C97FF;
+    transition: .3s;
 }
+
+#btn-gerar:hover{
+    color: #3C97FF;
+    background-color: #FFFFFF;
+}
+
 
 #container-resultado{
     display: flex;
@@ -112,7 +124,7 @@ span{
 }
 
 #container-resultado #resultado{
-    padding: 10px;
+    padding: 15px 0;
     text-align: center;
     font-weight: bold;
     border: 0;
@@ -122,5 +134,6 @@ span{
     font-weight: bold;
     padding: 10px;
     border: 0;
-    background: #C2C2C2;
+    color: #FFFFFF;
+    background: #3C97FF;
 }
